Fixed typing alignment

--- a/TransparencyMaster.theme.css
+++ b/TransparencyMaster.theme.css
@@ -1,17 +1,5 @@
 //META {"name":"Transparency Theme","description":"If you have any question or suggestion just message me at discord Twiistrz#8016","author":"Twiistrz","version":"2.0"}*//{}
 
-/* Configuration
-   ========================================================================== */
-
-   :root {
-    --bg-app: url(https://images3.alphacoders.com/734/734139.png);
-    --bg-home-btn: url(https://images3.alphacoders.com/734/734139.png);
-    --primary-text: #fff;
-    --secondary-text: #ddd;
-    --transparency: rgba(0, 0, 0, .6);
-    --dimmed: .5; 
-}
-
 /* Scrollbar
    ========================================================================== */
 
@@ -315,8 +303,7 @@
 }
 
 .chat-3bRxxu form .typing-2GQL18 {
-    bottom: -3px;
-    padding-left: 55px;
+    bottom: -2px;
 }
 
 /* Members
